--- a/package.json
+++ b/package.json
@@ -1,14 +1,31 @@
 {
   "name": "@auto-content-labs/messaging",
-  "version": "1.0.0",
-  "description": "A flexible messaging module supporting Kafka and RabbitMQ.",
+  "version": "1.0.1",
+  "description": "A flexible messaging module supporting Kafka",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "dotenvx run -f .env -- node src/index.js",
+    "dev": "nodemon dotenvx run -f .env -- node src/index.js",
+    "test": "jest --detectOpenHandles",
+    "lint": "eslint src"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.22.1",
     "kafkajs": "^2.2.4",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.14.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AutoContentLabs/messaging.git"
+  },
+  "author": "Quenteon",
+  "license": "MIT",
+  "engines": {
+    "node": ">=22"
   }
 }
