--- a/package.json
+++ b/package.json
@@ -6,18 +6,14 @@
   "scripts": {
     "start": "dotenvx run -f .env -- node src/index.js",
     "dev": "nodemon dotenvx run -f .env -- node src/index.js",
-    "test": "jest --detectOpenHandles",
-    "lint": "eslint src"
+    "test": "dotenvx run -f .env -- jest --detectOpenHandles",
+    "example": "dotenvx run -f .env -- node example/index.js"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.22.1",
+    "buffer": "^6.0.3",
     "kafkajs": "^2.2.4",
     "winston": "^3.17.0"
-  },
-  "devDependencies": {
-    "eslint": "^9.14.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.7"
   },
   "repository": {
     "type": "git",
