update brokers environment variable

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ APP_LOG_LEVEL=info
 
 # List of Kafka brokers to connect to
 # broker1:9092,broker2:9092,broker3:9092
+# local or docker internal
+# kafka:19092,localhost:9092
 KAFKA_BROKERS=localhost:9092
 
 # Unique client ID for Kafka
