If you do not define it, it will be created automatically

--- a/.env.example
+++ b/.env.example
@@ -24,10 +24,12 @@ KAFKA_BROKERS=localhost:9092
 
 # Unique client ID for Kafka
 # client.<your_unique_client_id>
+# If you do not define it, it will be created automatically.
 KAFKA_CLIENT_ID=client
 
 # Consumer group ID for Kafka
 # group.<your_unique_group_id>
+# If you do not define it, it will be created automatically.
 KAFKA_GROUP_ID=group
 
 # Logging level for Kafka (0: none, 1: error, 2: warn, 3: info, 4: debug, 5: trace)
