--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.2",
   "description": "A flexible messaging system",
   "main": "src/index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "dotenvx run -f .env.production -- node example/listeners/dataCollectRequestListener.js",
     "dev": "dotenvx run -f .env.development -- node example/listeners/dataCollectRequestListener.js",
@@ -14,7 +15,9 @@
     "@dotenvx/dotenvx": "^1.22.1",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "amqplib": "^0.10.4",
     "buffer": "^6.0.3",
+    "ioredis": "^5.4.1",
     "kafkajs": "^2.2.4",
     "uuid": "^11.0.3",
     "winston": "^3.17.0"
