redis environment variable

--- a/.env.development
+++ b/.env.development
@@ -4,7 +4,7 @@ APP_ENV=development
 NODE_ENV=${APP_ENV}
 
 # Specify the messaging system used in the application (Kafka in this case)
-MESSAGE_SYSTEM='kafka'
+MESSAGE_SYSTEM='redis'
 
 #  * crit (Critical): Serious problems with system components, but the entire system has not crashed. For example, a database connection loss or a critical component failure.
 #  * error (Error): Error occurrence. Although the process can continue, logging of erroneous situations is necessary. For example, user errors or database errors.
@@ -31,3 +31,20 @@ KAFKA_GROUP_ID=development
 
 # Logging level for Kafka (0: none, 1: error, 2: warn, 3: info, 4: debug, 5: trace)
 KAFKA_LOG_LEVEL=0
+
+# redis
+# 127.0.0.1
+REDIS_HOST_ADDRESS=127.0.0.1
+
+# 6379
+REDIS_HOST_PORT=6379
+
+# Unique client ID for Kafka
+# client.<your_unique_client_id>
+# If you do not define it, it will be created automatically.
+REDIS_CLIENT_ID=client
+
+# Consumer group ID for Kafka
+# group.<your_unique_group_id>
+# If you do not define it, it will be created automatically.
+REDIS_GROUP_ID=group
