--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_ENV=test
 NODE_ENV=${APP_ENV}  # Set NODE_ENV as 'test' for the testing environment
 
 # Specify the messaging system used in the application (Kafka in this case)
-MESSAGE_SYSTEM='kafka'
+MESSAGE_SYSTEM='redis'
 
 #  * crit (Critical): Serious problems with system components, but the entire system has not crashed. For example, a database connection loss or a critical component failure.
 #  * error (Error): Error occurrence. Although the process can continue, logging of erroneous situations is necessary. For example, user errors or database errors.
@@ -109,4 +109,19 @@ MESSAGING_TOPIC_METRIC=METRIC
 MESSAGING_TOPIC_REPORT=REPORT
 MESSAGING_TOPIC_DASHBOARD=DASHBOARD
 
+# redis
+# 127.0.0.1
+REDIS_HOST_ADDRESS=127.0.0.1
 
+# 6379
+REDIS_HOST_PORT=6379
+
+# Unique client ID for Kafka
+# client.<your_unique_client_id>
+# If you do not define it, it will be created automatically.
+REDIS_CLIENT_ID=client
+
+# Consumer group ID for Kafka
+# group.<your_unique_group_id>
+# If you do not define it, it will be created automatically.
+REDIS_GROUP_ID=group
