--- a/.env.development
+++ b/.env.development
@@ -42,9 +42,9 @@ REDIS_HOST_PORT=6379
 # Unique client ID for Kafka
 # client.<your_unique_client_id>
 # If you do not define it, it will be created automatically.
-REDIS_CLIENT_ID=client
+# REDIS_CLIENT_ID=client
 
 # Consumer group ID for Kafka
 # group.<your_unique_group_id>
 # If you do not define it, it will be created automatically.
-REDIS_GROUP_ID=group
+REDIS_GROUP_ID=development
