--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ KAFKA_BROKERS=localhost:9092
 # Unique client ID for Kafka
 # client.<your_unique_client_id>
 # If you do not define it, it will be created automatically.
-KAFKA_CLIENT_ID=client
+# KAFKA_CLIENT_ID=client
 
 # Consumer group ID for Kafka
 # group.<your_unique_group_id>
