--- a/.env.production
+++ b/.env.production
@@ -48,3 +48,26 @@ REDIS_HOST_PORT=6379
 # group.<your_unique_group_id>
 # If you do not define it, it will be created automatically.
 REDIS_GROUP_ID=production
+
+# RabbitMQ
+# 127.0.0.1
+RABBITMQ_HOST_ADDRESS=127.0.0.1
+
+# 5672
+RABBITMQ_HOST_PORT=5672
+
+# guest or admin
+RABBITMQ_DEAULT_USER=guest
+
+# guest or admin
+RABBITMQ_DEFAULT_PASSWORD=guest
+
+# Unique client ID for Kafka
+# client.<your_unique_client_id>
+# If you do not define it, it will be created automatically.
+# RABBITMQ_CLIENT_ID=client
+
+# Consumer group ID for Kafka
+# group.<your_unique_group_id>
+# If you do not define it, it will be created automatically.
+RABBITMQ_GROUP_ID=production
