--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,16 @@ MESSAGE_SYSTEM='redis'
 #  * debug (Debug): Detailed logs used for development and debugging purposes. Information such as variable values ​​and method calls within the process.
 APP_LOG_LEVEL=info
 
+# Unique client ID for service
+# client.<your_unique_client_id>
+# If you do not define it, it will be created automatically.
+# CLIENT_ID=client
+
+# Consumer group ID for service
+# group.<your_unique_group_id>
+# If you do not define it, it will be created automatically.
+GROUP_ID=group
+
 # Kafka Configuration
 
 # List of Kafka brokers to connect to
@@ -25,12 +35,12 @@ KAFKA_BROKERS=localhost:9092
 # Unique client ID for Kafka
 # client.<your_unique_client_id>
 # If you do not define it, it will be created automatically.
-# KAFKA_CLIENT_ID=client
+# KAFKA_CLIENT_ID=${CLIENT_ID}
 
 # Consumer group ID for Kafka
 # group.<your_unique_group_id>
 # If you do not define it, it will be created automatically.
-KAFKA_GROUP_ID=group
+KAFKA_GROUP_ID=${GROUP_ID}
 
 # Logging level for Kafka (0: none, 1: error, 2: warn, 3: info, 4: debug, 5: trace)
 KAFKA_LOG_LEVEL=0
@@ -119,12 +129,12 @@ REDIS_HOST_PORT=6379
 # Unique client ID for Kafka
 # client.<your_unique_client_id>
 # If you do not define it, it will be created automatically.
-REDIS_CLIENT_ID=client
+# REDIS_CLIENT_ID=${CLIENT_ID}
 
 # Consumer group ID for Kafka
 # group.<your_unique_group_id>
 # If you do not define it, it will be created automatically.
-REDIS_GROUP_ID=group
+REDIS_GROUP_ID=${GROUP_ID}
 
 # RabbitMQ
 # 127.0.0.1
@@ -142,9 +152,9 @@ RABBITMQ_DEFAULT_PASSWORD=guest
 # Unique client ID for Kafka
 # client.<your_unique_client_id>
 # If you do not define it, it will be created automatically.
-RABBITMQ_CLIENT_ID=client
+# RABBITMQ_CLIENT_ID=${CLIENT_ID}
 
 # Consumer group ID for Kafka
 # group.<your_unique_group_id>
 # If you do not define it, it will be created automatically.
-RABBITMQ_GROUP_ID=group
+RABBITMQ_GROUP_ID=${GROUP_ID}
