--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.22.1",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-jaeger": "^1.28.0",
     "@opentelemetry/exporter-zipkin": "^1.28.0",
     "@opentelemetry/sdk-trace-base": "^1.28.0",
     "@opentelemetry/sdk-trace-node": "^1.28.0",
