--- a/.env.development
+++ b/.env.development
@@ -81,3 +81,15 @@ RABBITMQ_DEFAULT_PASSWORD=guest
 # group.<your_unique_group_id>
 # If you do not define it, it will be created automatically.
 RABBITMQ_GROUP_ID=${GROUP_ID}
+
+# Telemetrys
+# Zipkin Configuration
+ZIPKIN_HOST_ADDRESS=localhost
+ZIPKIN_HOST_PORT=9411
+
+# Jaeger Configuration
+JAEGER_HOST_ADDRESS=localhost
+JAEGER_AGENT_PORT=5775
+JAEGER_HTTP_PORT=14268
+JAEGER_UI_PORT=16686
+JAEGER_ZIPKIN_PORT=9412
