--- a/.env.production
+++ b/.env.production
@@ -89,10 +89,10 @@ ZIPKIN_HOST_PORT=9411
 
 # Jaeger Configuration
 JAEGER_HOST_ADDRESS=localhost
-JAEGER_OTLP_GRPC_PORT=4317 # OTLP gRPC
-JAEGER_OTLP_HTTP_PORT=4318 # OTLP HTTP
+JAEGER_OTLP_GRPC_PORT=4317    # OTLP gRPC
+JAEGER_OTLP_HTTP_PORT=4318    # OTLP HTTP
 JAEGER_AGENT_PORT=5778
-JAEGER_ZIPKIN_PORT=9412 # Jaeger Zipkin  compatable port
-JAEGER_HOST_PORT=14250  # Jaeger gRPC port (collector)
-JAEGER_HTTP_PORT=14268  # Jaeger HTTP (traces)
-JAEGER_UI_PORT=16686    # Jaeger UI
+JAEGER_ZIPKIN_PORT=9412       # Jaeger Zipkin compatable
+JAEGER_HOST_PORT=14250        # Jaeger gRPC port (collector)
+JAEGER_HTTP_PORT=14268        # Jaeger HTTP (traces)
+JAEGER_UI_PORT=16686          # Jaeger UI
