--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "dotenvx run -f .env.production -- node example/listeners/dataCollectRequestListener.js",
-    "dev": "dotenvx run -f .env.development -- node example/listeners/dataCollectRequestListener.js",
+    "dev": "dotenvx run -f .env.development -- node --trace-warnings example/listeners/dataCollectRequestListener.js",
     "start-sender": "dotenvx run -f .env.production -- node example/senders/sendDataCollectRequest.js",
     "dev-sender": "dotenvx run -f .env.development -- node example/senders/sendDataCollectRequest.js",
     "test": "dotenvx run -f .env.test -- jest --detectOpenHandles"
