--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,9 @@ APP_ENV=production
 NODE_ENV=${APP_ENV}
 
 # Specify the messaging system used in the application (Kafka in this case)
-MESSAGE_SYSTEM='redis'
+MESSAGE_SYSTEM='kafka'
+# MESSAGE_SYSTEM='redis'
+# MESSAGE_SYSTEM='rabbitmq'
 
 #  * crit (Critical): Serious problems with system components, but the entire system has not crashed. For example, a database connection loss or a critical component failure.
 #  * error (Error): Error occurrence. Although the process can continue, logging of erroneous situations is necessary. For example, user errors or database errors.
