update environment and package

--- a/.env.production
+++ b/.env.production
@@ -29,8 +29,8 @@ GROUP_ID=production
 # Kafka server
 # List of Kafka brokers to connect to
 # broker1:9092,broker2:9092,broker3:9092
-# kafka:19092,localhost:9092
-KAFKA_BROKERS=localhost:9092
+# kafka:19092,localhost:9092,127.0.0.1:9092
+KAFKA_BROKERS=127.0.0.1:9092
 
 # Unique client ID for Kafka
 # client.<your_unique_client_id>
