--- a/.env.example
+++ b/.env.example
@@ -31,8 +31,8 @@ GROUP_ID=group
 # List of Kafka brokers to connect to
 # broker1:9092,broker2:9092,broker3:9092
 # local or docker internal
-# kafka:19092,localhost:9092
-KAFKA_BROKERS=localhost:9092
+# kafka:19092,localhost:9092,127.0.0.1:9092
+KAFKA_BROKERS=127.0.0.1:9092
 
 # Unique client ID for Kafka
 # client.<your_unique_client_id>
