--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "buffer": "^6.0.3",
     "ioredis": "^5.4.1",
     "kafkajs": "^2.2.4",
+    "ping": "^0.4.4",
     "uuid": "^11.0.3",
     "winston": "^3.17.0"
   },
