--- a/.env.test
+++ b/.env.test
@@ -96,3 +96,15 @@ JAEGER_ZIPKIN_PORT=9412 # Jaeger Zipkin  compatable port
 JAEGER_HOST_PORT=14250  # Jaeger gRPC port (collector)
 JAEGER_HTTP_PORT=14268  # Jaeger HTTP (traces)
 JAEGER_UI_PORT=16686    # Jaeger UI
+
+# Open Telemetry
+OTEL_HOST_ADDRESS=127.0.0.1
+OTEL_HOST_PORT=4317
+
+# logstash
+LOGTASH_HOST_ADDRESS=127.0.0.1
+LOGTASH_HOST_PORT=5044
+
+# graylog
+GRAYLOG_HOST_ADDRESS=127.0.0.1
+GRAYLOG_HOST_PORT=12201
