--- a/.env.example
+++ b/.env.example
@@ -176,7 +176,7 @@ JAEGER_HOST_PORT=14250        # Jaeger gRPC port (collector)
 JAEGER_HTTP_PORT=14268        # Jaeger HTTP (traces)
 JAEGER_UI_PORT=16686          # Jaeger UI
 
-# Open Telemetry
+# Open Telemetry Collector
 OTLP_HOST_ADDRESS=127.0.0.1
 OTLP_HOST_PORT=4317
 
