--- a/.env.production
+++ b/.env.production
@@ -99,9 +99,9 @@ JAEGER_HOST_PORT=14250        # Jaeger gRPC port (collector)
 JAEGER_HTTP_PORT=14268        # Jaeger HTTP (traces)
 JAEGER_UI_PORT=16686          # Jaeger UI
 
-# Open Telemetry
-OTEL_HOST_ADDRESS=127.0.0.1
-OTEL_HOST_PORT=4317
+# Open Telemetry Collector
+OTLP_HOST_ADDRESS=127.0.0.1
+OTLP_HOST_PORT=4317
 
 # logstash
 LOGTASH_HOST_ADDRESS=127.0.0.1
